# blind-chess

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: d2257568b8e4_init_schema.py
backend/app/: db.py  main.py  models.py  schemas.py  socketio_server.py
backend/app/routers/: games.py
backend/app/services/: game_service.py
backend/tests/: test_app_import.py  test_game_service.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: CapturedPieces.tsx  ChessBoard.tsx  Clock.tsx  MoveList.tsx
frontend/app/game/: page.tsx
frontend/app/lib/: chess.ts  socket.ts
frontend/app/room/[gameId]/: page.tsx
